# python-cli-test-helpers

./: .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  README.rst  copier.yaml  pyproject.toml  setup.py  tox.ini
.github/workflows/: check.yml  publish.yml  test.yml
cli_test_helpers/: __init__.py  commands.py  decorator.py  decorators.py  mixins.py
docs/: api.rst  conf.py  index.rst  installation.rst  other.rst  techniques.rst  tutorial.rst
examples/: .gitignore  MANIFEST.in  README.md  README.rst  copier.yaml  pyproject.toml  setup.py  tox.ini
examples/argparse/: .gitlab-ci.yml  README.md  copier.yaml  pyproject.toml  setup.py  tox.ini  {{_copier_conf.answers_file}}
examples/argparse/foobar/: __init__.py  __main__.py  cli.py  command.py
examples/argparse/tests/: test_cli.py  test_command.py
examples/argparse/{{module}}/: __main__.py  cli.py  command.py
examples/click/: .gitignore  .gitlab-ci.yml  LICENSE  README.md  copier.yaml  pyproject.toml  requirements.txt  setup.py  tox.ini
examples/click/foobar/: __init__.py  cli.py  command.py
examples/click/tests/: test_cli.py  test_command.py
examples/click/{{module}}/: __init__.py  __main__.py  cli.py  command.py
examples/docopt/: .gitignore  .gitlab-ci.yml  README.md  copier.yaml  pyproject.toml  requirements.txt  setup.py  tox.ini
examples/docopt/foobar/: __init__.py  cli.py  command.py
examples/docopt/tests/: test_cli.py  test_command.py
examples/docopt/{{module}}/: __init__.py  __main__.py  cli.py  command.py
examples/foobar/: __init__.py  cli.py  command.py
examples/tests/: test_cli.py  test_command.py
tests/: test_commands.py  test_decorator.py  test_decorators.py  test_logisolation.py
