[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-test-helpers"
version = "4.0.0"
description = "Useful helpers for writing tests for your Python CLI program."
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
  {name = "Peter Bittner", email = "peter@painless.software"},
]
maintainers = [
  {name = "Peter Bittner", email = "peter@painless.software"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Testing :: Mocking",
  "Topic :: Software Development :: Testing :: Unit",
]
keywords = [
  "python",
  "cli",
  "testing",
  "helpers",
]
requires-python = ">=3.7"

[project.urls]
homepage = "https://github.com/painless-software/python-cli-test-helpers"
Documentation = "https://python-cli-test-helpers.readthedocs.io/"
Examples = "https://github.com/painless-software/python-cli-test-helpers/tree/main/examples"

[tool.coverage.run]
source = ["cli_test_helpers"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
addopts = "--color=yes --doctest-modules --ignore examples/ --junitxml=tests/junit-report.xml --verbose"

[tool.ruff]
extend-exclude = ["docs/conf.py", "examples"]
extend-include = []

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = [
    "ANN",
    "D200",
    "D205",
    "D212",
    "Q000",
]

[tool.ruff.lint.per-file-ignores]
"cli_test_helpers/commands.py" = ["S602"]
"tests/*.py" = ["D400", "INP001", "S101"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "examples"]
