[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{package}}"
version = "0.1.0"
description = "{{project}}"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "{{author}}", email = "{{email}}"},
]
maintainers = [
  {name = "{{author}}", email = "{{email}}"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
keywords = [
  "cli",
]
requires-python = ">=3.9"
dependencies = [
  "docopt-ng",
]

[project.scripts]
"{{package}}" = "{{module}}.cli:main"

[project.urls]
homepage = "{{url}}"

[tool.coverage.run]
source = ["{{module}}"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
addopts = "--color=yes --doctest-modules --junitxml=junit-report.xml --verbose"

[tool.ruff]
extend-exclude = []
extend-include = []

[tool.ruff.lint]
extend-ignore = ["ANN", "B904", "D", "INP001", "T201", "TRY200"]
extend-select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
